Fix bottom 5px of Freshers Event list being cut off on mobile

--- a/static/css/freshers.scss
+++ b/static/css/freshers.scss
@@ -95,7 +95,7 @@ div.events-carousel {
     width: 100%;
 }
 
-.events-carousel .slick-track {
+div.freshers-event-item {
     /* add space on top of items so that the active item glow isn't cut off */
     margin-top: 5px;
 }
